@@ -1,0 +1,6 @@
+# This is a shorter MANIFEST.SKIP. Credits go to Dist::Zilla :)
+
+# avoid pot files (gettext)
+^MANIFEST.SKIP$
+\.po$
+\.pot$
