@@ -15,4 +15,4 @@ Test::More       = 0
 Locale::Msgfmt   = 0.14
 
 [Prereqs]
-Padre            = 0.57
+Padre            = 0.72
