@@ -2,6 +2,7 @@ Revision history for Padre-Plugin-Parrot
 
 {{$NEXT}}
 	- Switched to Dist::Zilla (AZAWAWI)
+	- Added compatibility with the latest Padre (AZAWAWI)
 
 0.27 2010.9.20
 	- Add menu option to open one of the installed example files (SZABGAB)
